# bcgen-cpp

./: .gitignore  CMakeLists.txt  README.md  compile.bash
cmake/: Doxyfile.in  version.cpp.in
cmake/modules/: documentation.cmake  versioning.cmake
contrib/: README.md
contrib/vscode/: extensions.json  settings.json
docs/: ArithmeticOperations_Unsigned.drawio
examples/: AND.cpp  Addition.cpp  CMakeLists.txt  INV.cpp  OR.cpp  README.md  XOR.cpp  addition64.cpp  aes128_ecb_decryption.cpp  aes128_ecb_encryption.cpp  negation64.cpp  signed_division64.cpp  signed_multiplication64_128.cpp  subtract64.cpp  unsigned_division64.cpp  unsigned_multiplication64_128.cpp  zero_equality64.cpp
include/: BristolCircuitGenerator.hpp  CircuitGenerator.hpp  LibscapiCircuitGenerator.hpp  SignedVar.hpp  UnsignedVar.hpp  UnsignedVariable.hpp  Variable.hpp  Wire.hpp
include/bcgen/: BristolCircuitGenerator.hpp  CircuitGenerator.hpp  CircuitTester.hpp  LibscapiCircuitGenerator.hpp  variables.hpp  version.hpp
src/: BristolCircuitGenerator.cpp  CircuitGenerator.cpp  LibscapiCircuitGenerator.cpp  SignedVar.cpp  UnsignedVar.cpp  UnsignedVariable.cpp  Variable.cpp  Wire.cpp
src/bcgen/: BristolCircuitGenerator.cpp  BristolCircuitTester.cpp  CircuitGenerator.cpp  CircuitTester.cpp  LibscapiCircuitGenerator.cpp  LibscapiCircuitTester.cpp  Variables.cpp  variables.cpp
tests/: CMakeLists.txt  UUT_CircuitGenerator.cpp  UUT_variables.cpp
unit_tests/: CMakeLists.txt  UUT_CircuitGenerator.cpp
